# cetmix-odoo-docker

./: Dockerfile.addons  README.md
13.0/: Dockerfile  Dockerfile.addons  Dockerfile.odoo  addons.yml  pyproject.toml
14.0/: Dockerfile  Dockerfile.addons  Dockerfile.odoo  addons.yml  docker-compose.yml  odoo.conf  pyproject.toml  requirements.txt
15.0/: Dockerfile  Dockerfile.addons  Dockerfile.odoo  addons.yml  pyproject.toml
16.0/: Dockerfile  Dockerfile.addons  Dockerfile.odoo  addons.yml  docker-compose.yml  odoo.conf  pyproject.toml
17.0/: Dockerfile  Dockerfile.addons  Dockerfile.odoo  addons.yml  extra-requirements.txt  pyproject.toml
18.0/: Dockerfile  Dockerfile.addons  Dockerfile.odoo  addons.yml  pyproject.toml
19.0/: Dockerfile.odoo  addons.yml  entrypoint.sh  pyproject.toml
