[build-system]
requires = ['hatchling', 'hatch-odoo']
build-backend = 'hatchling.build'

[project]
name = 'extra-addons'
version = '1.0'
dynamic = ['dependencies']

[tool.hatch.metadata.hooks.odoo-addons-dependencies]

[tool.hatch.build.hooks.odoo-addons-dirs]

[tool.hatch-odoo]
odoo_version_override = '14.0'
dependencies = ['click-odoo-contrib']
addons_dirs = ['.']